# goa

./: .gitignore  README  README.md  default.nix  flake.nix
examples/cmake_library/: .goarc  api  artifacts  used_apis
examples/cmake_library/src/: CMakeLists.txt  LICENSE  lib.cc
examples/cmake_library/src/include/: forty_two.h
examples/cmake_library/symbols/: libforty_two
examples/cmake_sdl2/: artifacts  used_apis
examples/cmake_sdl2/src/: CMakeLists.txt  Main.cpp
examples/cmake_step2/: import  used_apis  version
examples/hello_make/: used_apis
examples/hello_make/src/: Makefile  hello.cc
examples/hello_meson/: artifacts  used_apis
examples/hello_meson/src/: hello.cc  meson.build
examples/hello_nasm/: README  README.md  version
examples/hello_nasm/src/: Makefile  hello.asm
examples/hello_posix/: used_apis
examples/hello_posix/src/: Makefile  hello.c
examples/hello_rust/: used_apis  version
examples/hello_rust/test/: artifact
examples/hello_zig/: used_apis
examples/hello_zig/src/: Makefile  README  aux.c  build.zig  hello.c
examples/index/: README  hello_posix  index
examples/profiling/: goarc  used_apis
examples/profiling/src/: Makefile  profiling.cc
examples/qt5_core/: artifacts  used_apis  version
examples/qt5_core/test/: artifact
examples/rust_debug/: used_apis  version
examples/rust_debug/src/: Cargo.toml  build.rs
examples/rust_debug/test/: artifact
examples/vfs/1-fs_query/: README
examples/vfs/5-pipe/: README
share/bash-completion/: goa
share/goa/: backtrace  gaol  goarc  hid  hrd  install_rust_toolchain.mk
(+130 files in other folders)
